--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -118,7 +118,7 @@
       <h4 class="mb-4">🧈 Sudhamrit Admin</h4>
       <a href="#" class="active"><i class="bi bi-speedometer2 me-2"></i> Dashboard</a>
       <a href="#"><i class="bi bi-box-seam me-2"></i> Products</a>
-      <a href="#"><i class="bi bi-cart-check me-2"></i> Orders</a>
+      <a href="/orders"><i class="bi bi-cart-check me-2"></i> Orders</a>
       <a href="#"><i class="bi bi-people me-2"></i> Customers</a>
       <a href="#"><i class="bi bi-gear me-2"></i> Settings</a>
       <hr class="mx-3" />
