--- a/templates/cart.html
+++ b/templates/cart.html
@@ -6,6 +6,10 @@
   <title>Sudhamrit Dairy Farm - Cart</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  
+  <!-- Custom Responsive CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive.css') }}" />
+  
   <style>
     body { background: #f9fff9; font-family: 'Poppins', sans-serif; }
 
@@ -80,7 +84,7 @@
   {% if cart_items %}
   <div class="row g-4" id="cart-container">
     {% for item in cart_items %}
-    <div class="col-md-4">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card h-100 cart-card border-0 shadow-sm rounded-4 text-center">
         {% if item.product.product_image %}
           <img src="{{ url_for('static', filename='images/' + item.product.product_image) }}" class="card-img-top" alt="{{ item.product.product_name }}" style="height: 200px; object-fit: cover;">
@@ -132,6 +136,8 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Mobile Enhancements -->
+<script src="{{ url_for('static', filename='js/mobile-enhancements.js') }}"></script>
 
 <!-- Quantity Control Script -->
 <script>
